[gd_scene load_steps=3 format=3 uid="uid://d44ed54c4mnf"]

[ext_resource type="Texture2D" uid="uid://cb4s5yt3sxb8g" path="res://icon.svg" id="1_me5s6"]
[ext_resource type="Script" path="res://Player.gd" id="2_3ickt"]

[node name="Sprite2D" type="Sprite2D" groups=["Player"]]
position = Vector2(580, 525)
texture = ExtResource("1_me5s6")
script = ExtResource("2_3ickt")

[node name="Button" type="Button" parent="."]
offset_left = -65.0
offset_top = 75.0
offset_right = -57.0
offset_bottom = 83.0
disabled = true
text = "Hit
"

[node name="Button2" type="Button" parent="."]
offset_left = 4.0
offset_top = 76.0
offset_right = 57.0
offset_bottom = 107.0
disabled = true
text = "Stand
"

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_button_2_pressed"]
